add redme file and some modify script

--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
       <div class="title"><h1>currency convater</h1></div>
       <div class="input">
         <div class="currency1">
-          <select class="select"></select>
-          <input type="number" placeholder="currency rate" />
+          <select class="select" id="to"></select>
+          <input type="number" placeholder="Amount" id="to-amount" />
         </div>
         <div class="currency2">
-          <select class="select2"></select>
-          <input type="number" placeholder="currency rate" />
+          <select class="select2" id="form"></select>
+          <input id="form-amount" type="number" placeholder="Amount" />
         </div>
       </div>
       <div class="result">
-        <h2 id="rate">1 dollar = 82 taka</h2>
+        <h2 id="rate"></h2>
       </div>
     </div>
     <div class="fotter">
